fix squeezed vertex box occurs sometimes and map is now bigger all around (no more at stuck in the corner)

--- a/src/main/webapp/css/graph-main.css
+++ b/src/main/webapp/css/graph-main.css
@@ -3,8 +3,8 @@
 }
 body{
     overflow:hidden;
-    min-width:5000px;
-    min-height:5000px;
+    min-width:4500px;
+    min-height:2500px;
 }
 #mind_map {
     font-family:arial;
